@@ -25,6 +25,11 @@
 - Made the file descriptor checks in the fsync() and fdatasync()
   functions more robust.
 
+- Cleaned up the 68k build makefile, so that the CPU and FPU
+  tests and the error message display can run safely even
+  on plain 68000 machines. This won't work for the 32 bit small
+  data model, which implies 68020 code, but so there...
+
 
 c.lib 1.189 (5.3.2005)
 
